# v2rdm_casscf

./: .gitignore  .travis.yml  CMakeLists.txt  GRAD_arrays.cc  GRAD_arrays.h  GRAD_tensors.cc  GRAD_tensors.h  Makefile  Makefile.fortran  README.md  __init__.py  __init__.py.in  backtransform_tpdm.cc  backtransform_tpdm.h  basis.cc  blas.cc  blas.h  blas_mangle.h  cg_solver.cc  cg_solver.h  checkpoint.cc  configure  d2.cc  d3.cc  d4.cc  diis.cc  doc.rst  exponentiate_step.cc  extended_koopmans.cc  extras.py  fcidump.cc  focas_data.F90  focas_diis.F90  focas_driver.F90  focas_energy.F90  focas_exponential.F90  focas_genfock.F90  focas_gradient.F90  focas_gradient.F90.BLAS3  focas_hessian.F90  (+45 more)
cmake/: v2rdm_casscfConfig.cmake.in
old_jacobi_files/: jacobi_maxind_mod.F90.BAK
tests/: Makefile  test_psiapi.py  test_psithon.py
tests/inp/: n2.cd.threaded.inp  n2.df.631g.inp  n2.pk.631g.threaded.inp  n2.pk.inp
tests/old-tests/: run-tests
tests/old-tests/inp/: n2.cd.inp  n2.df.631g.threaded.inp  n2.df.threaded.inp  n2.pk.threaded.inp
tests/old-tests/ref/: n2.df.631g.inp.out.ref  n2.df.631g.threaded.inp.out.ref  n2.df.threaded.inp.out.mol.jacobi.ref  n2.df.threaded.inp.out.ref  n2.pk.631g.threaded.inp.out.ref  n2.pk.inp.out.mol.jacobi.ref  n2.pk.threaded.inp.out.ref
tests/old-tests/v2rdm3/: output.ref
tests/ref/: n2.cd.inp.out.mol.jacobi.ref  n2.cd.inp.out.ref  n2.cd.threaded.inp.out.mol.jacobi.ref  n2.cd.threaded.inp.out.ref  n2.df.631g.inp.out.mol.jacobi.ref  n2.df.631g.threaded.inp.out.mol.jacobi.ref  n2.pk.631g.threaded.inp.out.mol.jacobi.ref  n2.pk.inp.out.ref  n2.pk.threaded.inp.out.mol.jacobi.ref
tests/v2rdm1/: output.ref
tests/v2rdm2/: output.ref
tests/v2rdm3/: output.ref
tests/v2rdm4/: output.ref
tests/v2rdm5/: output.ref
tests/v2rdm6/: output.ref
tests/v2rdm7/: output.ref
tests/v2rdm8/: output.ref
v2rdm_grad/: GRAD_arrays.cc  GRAD_arrays.h  GRAD_tensors.cc  GRAD_tensors.h  Makefile  __init__.py  basis.cc  cg_solver.cc  cg_solver.h  checkpoint.cc  d2.cc  d3.cc  doc.rst  focas_data.F90  focas_driver.F90  focas_energy.F90  focas_exponential.F90  focas_gradient.F90  focas_interface.F90  focas_transform_driver.F90  focas_transform_teints.F90  g2.cc  input.dat~  jk_grad_v2rdm.cc  jk_grad_v2rdm.cc~  jk_grad_v2rdm.h  linking_with_fortran  oei.cc  oeprop.h  pymodule.py  q2.cc  scf_grad_v2rdm.cc  scf_grad_v2rdm.cc~  scf_grad_v2rdm.h  setup  sortintegrals.cc  t1.cc  t2.cc  tei.cc  threeindexintegrals.cc  (+3 more)
